--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jumper423/yii2-images",
     "description": "yii2 images module for storing images",
-    "keywords": ["yii2", "images", "store", "images store", "yii2-images", "Costa Rico"],
+    "keywords": ["yii2", "images", "store", "images store", "yii2-images", "Costa jumper423"],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
 
